# ragdrift

./: .env.example  .gitignore  AGENTS.md  BUILD_LOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
demo/: golden_queries.json  inject_drift.py  sample_scan_results.json
demo/corpus_v1/: 02_market_analysis.txt  03_regulatory_compliance.md  06_clinical_trials.md  07_patient_data.txt  08_drug_interactions.md  11_contract_law.md  13_data_privacy.md  14_corporate_governance.txt  16_cloud_architecture.md  17_api_design.txt  18_data_pipelines.md  19_security_practices.txt  20_ml_deployment.md
demo/corpus_v2/: 01_investment_risk.md  03_regulatory_compliance.md  04_portfolio_management.txt  05_fintech_trends.md  08_drug_interactions.md  09_telemedicine.txt  10_health_records.md  11_contract_law.md  12_intellectual_property.txt  15_dispute_resolution.md  16_cloud_architecture.md  18_data_pipelines.md
ragdrift/: cli.py
ragdrift/agent/: graph.py  state.py
ragdrift/agent/nodes/: classifier.py  differ.py  explainer.py  extractor.py  prober.py  sampler.py
ragdrift/api/: main.py
ragdrift/app/: streamlit_app.py
ragdrift/core/chunking/: chunker.py
ragdrift/core/diff/: lexical.py  semantic.py  structural.py
ragdrift/core/extraction/: markdown.py  pdf.py  router.py  schema.py  text.py
ragdrift/core/indexing/: bm25.py  vector.py
ragdrift/core/probing/: evaluator.py  golden_set.py
ragdrift/storage/: drift_log.py  models.py  snapshots.py
tests/: test_full_scan.py  test_golden_probes.py  test_lexical_diff.py  test_structural_diff.py
